--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
+body {
+  background-color: #58585f;
+}
 .App {
-  text-align: center;
+  padding: 1% 5%;
+}
+.head {
+  border-bottom: 2px solid black;
+  border-radius: 0 0 40% 20%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.head,
+.inputbox {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: space-between;
   align-items: center;
+}
+
+.inputt {
+  font-size: 30px;
+  border-radius: 20px;
+  width: 60vw;
+  padding: 1% 2%;
+  box-shadow: inset 0px 0px 10px black;
+  text-align: center;
+  transition: all 1s ease-in-out;
+}
+
+.inputt:focus {
+  box-shadow: 0px 0px 10px 1000px black;
+}
+.inputbox {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: 10% 0;
 }
 
-.App-link {
-  color: #61dafb;
+.inputtbtn {
+  width: 200px;
+  aspect-ratio: 3/1;
+  position: relative;
+  right: -5%;
+  border: 2px solid black;
+  font-size: 30px;
+  font-weight: bold;
+  border-radius: 200px;
+
+  transition: all 0.5s ease;
+}
+.inputtbtn:hover {
+  font-size: 35px;
+  box-shadow: inset 0px 0px 12px black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputtbtn:active {
+  transform: scale(0.9);
+  box-shadow: inset 0px 0px 12px black;
 }
